--- a/public/main.html
+++ b/public/main.html
@@ -132,25 +132,25 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <h3>el cuerpo hueco de la arquitectura</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-01.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-02.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-03.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-04.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-05.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-06.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-07.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-08.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-09.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-10.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-11.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-12.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-13.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-14.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-15.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-16.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-18.jpg" alt="Image 1">
-      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-01.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-02.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-03.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-04.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-05.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-06.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-07.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-08.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-09.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-10.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-11.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-12.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-13.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-14.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-15.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-16.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-18.jpg" alt="Image 1">
+      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
@@ -158,16 +158,16 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <h3>en el muro</h3>
       <p>arruinar una habitación</p>
       <br>
-      <img src="public/assets/img/11_en el muro/01.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/02.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/03.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/04.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/05.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/06.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/07.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/08.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/09.jpg" alt="Image 1">
-      <img src="public/assets/img/11_en el muro/10.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/01.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/02.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/03.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/04.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/05.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/06.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/07.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/08.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/09.jpg" alt="Image 1">
+      <img src="assets/img/11_en el muro/10.jpg" alt="Image 1">
       <br>
       <p>¿Qué distancia nos separa del afuera de un edificio cuando estamos en su interior? ¿Qué significa estar adentro de un edificio? ¿Qué espesor tienen los muros que delimitan las habitaciones en las que estamos? ¿Qué hay adentro de los muros? 
 En el centro de una habitación ubicamos un muro que en cada una de sus caras tiene dos vanos del tamaño de una puerta. La distancia entre las caras esta exagerada para volver espacial el interior del muro que en su piso tiene una montaña de tierra. En las caras laterales hay espejos que reflejan y repiten al infinito la imagen del muro. Una serie de perfiles metálicos sostienen al muro para que no ceda ante el empuje de la tierra. Dentro de estos perfiles hay semillas de diversas plantas florales que los concurrentes son invitados a tomar, introducirlas en un vasito de jardinería, rellenarlo con tierra y esperar que al llevarlo a su casa, germine y crezca una planta.
@@ -187,38 +187,38 @@ Like the light that illuminates by hiding from itself, the walls become present 
       <h3>Estados de la Arquitectura</h3>
       <p>Seis Alegorías Arquitectónicas</p>
       <br>
-      <img src="public/assets/img/12_estados de la arquitectura/01" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/02" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/03" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/04" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/05" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/06" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/07" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/08" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/09" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/10" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/11" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/12" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/13" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/14" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/15" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/16" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/17" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/18" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/19" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/20" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/21" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/22" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/23" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/24" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/25" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/26" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/27" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/28" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/29" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/30" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/31" alt="Image 1">
-      <img src="public/assets/img/12_estados de la arquitectura/32" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/01" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/02" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/03" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/04" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/05" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/06" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/07" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/08" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/09" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/10" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/11" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/12" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/13" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/14" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/15" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/16" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/17" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/18" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/19" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/20" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/21" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/22" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/23" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/24" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/25" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/26" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/27" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/28" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/29" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/30" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/31" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/32" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <p>Dibujos, montajes, textos: Manuel Mensa, Lucas Torres Agüero, Matías Etchart</p>
       <!-- Add more content here if needed -->
@@ -371,8 +371,8 @@ No se trata de la "mejor arquitectura", de la arquitectura más virtuosa, ya que
       <h3>never even</h3>
       <p>(respeto por las cosas como son)</p>
       <br>
-      <img src="public/assets/img/20_never even/01.jpg" alt="Image 1">
-      <img src="public/assets/img/20_never even/02.jpg" alt="Image 1">
+      <img src="assets/img/20_never even/01.jpg" alt="Image 1">
+      <img src="assets/img/20_never even/02.jpg" alt="Image 1">
       <p>Proyecto: Manuel Mensa
 Publicado en Symmetry: The One and the Many (David Salomon, Archivos de Arquitectura, 2018. EAEU UTDT)
       </p>
@@ -413,16 +413,16 @@ ________________________________________
       <!-- Add more content here if needed -->
     </div>
       <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>parque de las ciencias</h3>
+      <h3>Parque de Las Ciencias</h3>
       <br>
-      <img src="public/assets/img/22_parque de las ciencias/01.jpg" alt="Image 1">
-      <img src="public/assets/img/22_parque de las ciencias/02.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/03.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/04.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/05.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/06.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/07.jpg" alt="Image 1">
-        <img src="public/assets/img/22_parque de las ciencias/08.jpg" alt="Image 1">
+      <img src="assets/img/22_parque de las ciencias/01.jpg" alt="Image 1">
+      <img src="assets/img/22_parque de las ciencias/02.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/03.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/04.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/05.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/06.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/07.jpg" alt="Image 1">
+        <img src="assets/img/22_parque de las ciencias/08.jpg" alt="Image 1">
        
       <!-- Add more content here if needed -->
     </div>
@@ -448,17 +448,17 @@ Publicado en Superdigital (Editor: Ciro Najle. CPAU 2018)
         <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>singular 00</h3>
+      <h3>Singular 00</h3>
       <br>
       <br>
-      <img src="public/assets/img/24_singular 00/01.jpg" alt="Image 1">
-       <img src="public/assets/img/24_singular 00/02.jpg" alt="Image 1">
-       <img src="public/assets/img/24_singular 00/03.jpg" alt="Image 1">
-       <img src="public/assets/img/24_singular 00/04.jpg" alt="Image 1">
+      <img src="assets/img/24_singular 00/01.jpg" alt="Image 1">
+       <img src="assets/img/24_singular 00/02.jpg" alt="Image 1">
+       <img src="assets/img/24_singular 00/03.jpg" alt="Image 1">
+       <img src="assets/img/24_singular 00/04.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>tu amorosa</h3>
+      <h3>Tu Amorosa</h3>
       <br>
       <br>
       <img src="public/assets/img/27_tu amorosa/01.png" alt="Image 1">
@@ -466,7 +466,7 @@ Publicado en Superdigital (Editor: Ciro Najle. CPAU 2018)
     </div>
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>walls, holes and doors</h3>
+      <h3>Walls, Holes and Doors</h3>
       <br>
       <br>
       <p> Todos los proyectos de este libro están hechos de muros, vanos y puertas. Es lo primero que hay que decir, aunque sea lo más evidente, porque bien se podría decir eso mismo de toda arquitectura. Esta obviedad surge de la experiencia de cualquier vida que implique desplazamientos terrestres. Sin embargo, afirmarlo suena provocador. ¿Qué podría ser más liberador que aceptar que estos tres elementos concentran toda la especificidad de la arquitectura? 
