--- a/public/main.html
+++ b/public/main.html
@@ -149,7 +149,6 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-15.jpg" alt="Image 1">
       <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-16.jpg" alt="Image 1">
       <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
-      <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-18.jpg" alt="Image 1">
       <img src="assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
@@ -187,38 +186,38 @@ Like the light that illuminates by hiding from itself, the walls become present 
       <h3>Estados de la Arquitectura</h3>
       <p>Seis Alegorías Arquitectónicas</p>
       <br>
-      <img src="assets/img/12_estados de la arquitectura/01" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/02" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/03" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/04" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/05" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/06" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/07" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/08" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/09" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/10" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/11" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/12" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/13" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/14" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/15" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/16" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/17" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/18" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/19" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/20" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/21" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/22" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/23" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/24" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/25" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/26" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/27" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/28" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/29" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/30" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/31" alt="Image 1">
-      <img src="assets/img/12_estados de la arquitectura/32" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/01.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/02.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/03.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/04.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/05.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/06.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/07.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/08.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/09.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/10.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/11.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/12.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/13.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/14.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/15.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/16.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/17.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/18.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/19.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/20.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/21.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/22.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/23.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/24.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/25.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/26.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/27.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/28.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/29.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/30.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/31.jpg" alt="Image 1">
+      <img src="assets/img/12_estados de la arquitectura/32.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <p>Dibujos, montajes, textos: Manuel Mensa, Lucas Torres Agüero, Matías Etchart</p>
       <!-- Add more content here if needed -->
@@ -428,7 +427,7 @@ ________________________________________
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Personajismo</h3>
-      <img src="public/assets/img/23_personaeism/02.jpg" alt="Image 1">
+      <img src="assets/img/23_personaeism/02.jpg" alt="Image 1">
       <p> Un arquitecto personajista crea una multiplicidad de personajes que, mediados por la cultura que los precede y modulados por problemáticas disciplinares amplias y formas actuales de relevancia de la arquitectura, toman la forma y se despliegan como modalidades operativas y hacen convergentes series de proyectos, de otro modo paralelas o divergentes.
 Los personajes creados por un arquitecto personajista están dotados de una vida propia que supera a la del arquitecto como sujeto que los crea, en tanto no funcionan como un simple reflejo de su personalidad ni se destinan exclusivamente a expresar un interior subjetivo, asumido como opaco e inescrutable. Funcionan, en cambio, como los dispositivos artificialmente concebidos y por ende trabajables de una súper-autoría no personalista. La figura del genio romántico se multiplica, se transparenta como construcción y se despliega virtualmente en una multiplicidad de agenciamientos y modalidades que superan la idea subjetiva de autor, tanto en sus capacidades como en su ductilidad, volviéndola un medio abierto de trabajo y destilando los matices de su fuerza vital, a la vez escurridiza y objetivable.
 La práctica del arquitecto personajista tiene como antecedente próximo a los avatares, pero a diferencia de éstos trasciende, al tiempo que hace mundano, el asombro ante la capacidad tecnológica de aparentar ser otro, modelizando caracteres, modos, rutinas y espectros en una forma abstracta y consistente de pensamiento y conformando una máquina proyectual autonomizada de sus referencias. Los personajes del arquitecto personajista no precisan de una figura que los suplante para sostener una máscara ficcional detrás de la que se supone que hay un fondo oculto. Distanciados de toda idea de ficción y de todo fundamento, los personajes son seres virtuales contenedores de una realidad latente, y desfiguran la idea misma de figura mediante la producción y multiplicación de figuraciones.
@@ -461,7 +460,7 @@ Publicado en Superdigital (Editor: Ciro Najle. CPAU 2018)
       <h3>Tu Amorosa</h3>
       <br>
       <br>
-      <img src="public/assets/img/27_tu amorosa/01.png" alt="Image 1">
+      <img src="assets/img/27_tu amorosa/01.png" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
