--- a/public/main.html
+++ b/public/main.html
@@ -584,13 +584,13 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Casa Freesbee</h3>
       <p>Planos</p>
       <br>
-      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_01.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_02.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_03.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_04.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_05.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_06.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura_07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/03.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/04.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/05.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/06.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/07.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
@@ -598,12 +598,12 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Casa Gully</h3>
       <p>Fotos</p>
       <br>
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_1.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_2.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_3.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_4.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_5.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_fotos_6.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/1.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/2.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/3.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/4.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/5.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_fotos/6.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
@@ -611,8 +611,8 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Casa Gully</h3>
       <p>Planos</p>
       <br>
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura_01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura_02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/02.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
@@ -620,13 +620,13 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Geometrías Invisibles</h3>
       <p>Vehículo</p>
       <br>
-      <img class="lazyload" src="assets/img/13_vehiculo_01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_06.jpeg" alt="Image 1">
-      <img class="lazyload" src="assets/img/13_vehiculo_07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/06.jpeg" alt="Image 1">
+      <img class="lazyload" src="assets/img/13_vehiculo/07.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
@@ -634,12 +634,12 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Edificio</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="assets/img/32_edificio_01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/32_edificio_02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/32_edificio_03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/32_edificio_04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/32_edificio_05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/32_edificio_06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/32_edificio/06.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
@@ -647,9 +647,9 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Rooms</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="assets/img/33_rooms_01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms_02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms_03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
@@ -657,8 +657,8 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Avalos 2172</h3>
       <p>Planos</p>
       <br>
-      <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura_01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura_02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura/02.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
