--- a/public/main.html
+++ b/public/main.html
@@ -49,7 +49,7 @@
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>arquitectura sin estado</h3>
+      <h3>Arquitectura sin Estado</h3>
       <p>lorem ipsum dolor</p>
       <br>
        <p>Según Charles Jencks en su libro El Lenguaje de la Arquitectura Posmoderna (1972), en
@@ -79,7 +79,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>cenotafios</h3>
+      <h3>Cenotafios</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img class="lazyload" src="/assets/img/04_cenotafios_fotos/01.jpg" alt="Image 1">
@@ -105,7 +105,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>casa freesbee x rc</h3>
+      <h3>Casa Freesbee x RC</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img class="lazyload" src="/assets/img/05_casa freesbee x rc/01.jpg" alt="Image 1">
@@ -117,7 +117,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>casa freesbee x sg</h3>
+      <h3>Casa Freesbee x SG</h3>
       <p>lorem ipsum dolor</p>
       <p></p>
       <br>
@@ -131,7 +131,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>el cuerpo hueco de la arquitectura</h3>
+      <h3>El Cuerpo Hueco de la Arquitectura</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-01.jpg" alt="Image 1">
@@ -156,8 +156,8 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>en el muro</h3>
-      <p>arruinar una habitación</p>
+      <h3>En el Muro</h3>
+      <p>Arruinar una Habitación</p>
       <br>
       <img class="lazyload" src="assets/img/11_en el muro/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/11_en el muro/02.jpg" alt="Image 1">
@@ -225,7 +225,7 @@ Like the light that illuminates by hiding from itself, the walls become present 
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>hoy el mundo</h3>
+      <h3>Hoy el Mundo</h3>
       <p>De la A la Zeta.</p>
       <br>
       <p>A: Hoy el mundo es economía. La arquitectura debe utilizar sus herramientas disciplinares para facilitar la administración eficiente de los recursos utilizados en la construcción de edificios. 
@@ -317,8 +317,8 @@ Z: Today the world is heading for environmental collapse. Architecture as a disc
      
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>matter os fact</h3>
-      <p>el inevitable sufrimiento de la arquitectura</p>
+      <h3>Matter of Fact</h3>
+      <p>El Inevitable Sufrimiento de la Arquitectura</p>
       <br>
       <p>[…] Todo arte, toda filosofía pueden ser considerados como medios al mismo tiempo saludables y auxiliares al servicio de la vida en crecimiento, en lucha; presuponen siempre sufrimientos, seres que sufren. Pero hay dos clases de seres que sufren: los que sufren por su abundancia de vida, que desean un arte dionisíaco y que tienen asimismo una visión y una comprensión trágicas de la vida; y aquellos que sufren por su empobrecimiento de vida, que buscan en el arte y en el conocimiento el descanso, el silencio, el mar en calma, la entrega personal o, por el contrario, la borrachera, la crispación, el estupor, el delirio. […] El ser más rico en abundancia vital, el dios y el hombre dionisíacos pueden permitirse no solo ver lo terrible y problemático, sino también cometer incluso una acción terrible y entregarse a todo lujo de destrucciones, descomposiciones y negaciones; para ellos, el mal, el absurdo y la fealdad horrible están, por así decirlo, permitidos, en virtud de un excedente de fuerzas generadoras y fecundas, capaces de convertir cualquier desierto en un país fértil. 
 Friedrich Nietzsche, La Gaya Ciencia  
@@ -663,8 +663,20 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
     </div>
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>nombre-proyecto</h3>
-      <p>lorem ipsum dolor</p>
+      <h3>Hacia una Arquitectura sin Fin</h3>
+      <p>1. ¿Cuáles son las cualidades, las capacidades, las potencias que están dentro de la arquitectura que son socialmente transformadoras? 
+2. Mientras que la arquitectura encuentre sus fines subyugados a determinaciones externas el despliegue de una política propia estará inhibido. 
+3. La arquitectura, en tanto núcleo teórico que puede pensar cómo se “espacializa” el mundo está confinada a ejercitar la mera praxis de la supervivencia. 
+4. La construcción de un edificio es una actualización temporal de una decisión espacial tomada previamente. Es una cristalización de un momento anterior.
+5. La arquitectura liberada de su carácter empírico deviene un saber que puede pensar el mundo. 6. En la arquitectura sin fin no existen los encargos. 
+7. En una misma arquitectura hay una arquitectura con una determinada idea política y una arquitectura con otra idea política superpuesta, en contradicción, en dialogo y en fricción.
+8. Habitar es un acto primitivo e instintivo que precisa únicamente de la protección del clima. 
+9. La arquitectura sin fin tiene un propósito en sí misma. 
+10. La arquitectura sin fin incorpora lo construible al reflexionar sobre lo construido. 
+11. Una arquitectura que se propone apolítica esta entregada a una política que además de ajena, desconoce. 
+12. Como si se tratara de una cuestión topológica las verdaderas decisiones son en relación a cuantos agujeros tiene un muro, el resto es entretenimiento. 
+13. Del mismo modo en el que la pintura se emancipo al dejar de ser “útil” en términos de progreso al ser reemplazada en su dimensión técnica por la fotografía, lo mismo sucede ahora con la arquitectura. Su utilidad ya fue desplegada y ahora solo le queda el tortuoso camino de la emancipación.
+</p>
       <br>
       <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
       <!-- Add more content here if needed -->
