--- a/public/main.html
+++ b/public/main.html
@@ -108,11 +108,11 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <h3>Casa Freesbee x RC</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="/assets/img/05_casa freesbee x rc/01.jpg" alt="Image 1">
-      <img class="lazyload" src="/assets/img/05_casa freesbee x rc/02.jpg" alt="Image 1">
-      <img class="lazyload" src="/assets/img/05_casa freesbee x rc/03.jpg" alt="Image 1">
-      <img class="lazyload" src="/assets/img/05_casa freesbee x rc/04.jpg" alt="Image 1">
-      <img class="lazyload" src="/assets/img/05_casa freesbee x rc/05.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/05_casa_freesbee_x_rc/01.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/05_casa_freesbee_x_rc/02.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/05_casa_freesbee_x_rc/03.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/05_casa_freesbee_x_rc/04.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/05_casa_freesbee_x_rc/05.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
@@ -120,12 +120,12 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <h3>Casa Freesbee x SG</h3>
       <p>lorem ipsum dolor</p> 
       <br>
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/07_casa freesbee x sg/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/06.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
