--- a/public/main.html
+++ b/public/main.html
@@ -740,7 +740,7 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
     </div>
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>nombre-proyecto</h3>
+      <h3>MothershipTheatre</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
